v.0.9.2 used for final tests. Import, Graph and Weigh finished.
ChartPage: added icon of syringe and meal on the graph path.
WeighFoodPage:
  FullScreenImagePage: added to see fullscreen the container photo
Business Objects: TimeBegin.DateTime = now; Meal.EventTime
  new classes: Device, DeviceModel, DeviceModel
  GlucoseRecord: simplified, eliminated several unuseful properties
Imports: completion and great speed improvements (bulk writes with transactions and pre generated query string.
  added detection of devices from csv file
Database: added tables:  Devices, SensorsRecords, DevicesModels, Events, modified e few names of attributes
Refactorings of many Properties and Database fields

--- a/GlucoMan.Maui/ClickableImagePage.xaml
+++ b/GlucoMan.Maui/ClickableImagePage.xaml
@@ -6,15 +6,17 @@
              Title="ClickableImagePage">
     <VerticalStackLayout>
         <HorizontalStackLayout>
-            <Button x:Name="btnSavePosition" Text="Keep" 
-                    ToolTipProperties.Text="Closes the page remembering the current position, that can be saved in the other page"
+            <Button x:Name="btnSavePosition" 
+                    ImageSource="choose.png"
+                    ToolTipProperties.Text="Choose: closes the page remembering the current position, that will be saved in the other page"
                     BackgroundColor="LightGreen" 
                     TextColor="Black"
                     FontAttributes="Bold"
                     HeightRequest="50"
                     Clicked="BtnSavePosition_Clicked"/>
-            <Button x:Name="btnForgetPosition" Text="Forget" 
-                    ToolTipProperties.Text="Closes the page forgetting the current position"
+            <Button x:Name="btnForgetPosition"
+                    ImageSource="escape.png"
+                    ToolTipProperties.Text="Escape: closes the page forgetting the current position"
                     BackgroundColor="LightCoral" 
                     TextColor="White"
                     FontAttributes="Bold"
