--- a/GlucoMan.Maui/InjectionsPage.xaml
+++ b/GlucoMan.Maui/InjectionsPage.xaml
@@ -151,7 +151,7 @@
                       RowHeight="22">
                 <!-- Header with column labels -->
                 <ListView.Header>
-                    <Grid ColumnDefinitions="*,55,55,55,65"
+                    <Grid ColumnDefinitions="150,50,50,55,*"
                         BackgroundColor="#e8f5e9"
                         Margin="2"
                         Padding="0,3,0,3">
@@ -191,8 +191,8 @@
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <Grid ColumnDefinitions="*,55,55,55,65">
-                                    <Label Grid.Column="0" Text="{Binding Timestamp.DateTime}" 
+                                <Grid ColumnDefinitions="150,50,50,55,*">
+                                    <Label Grid.Column="0" Text="{Binding EventTime.DateTime}" 
                                         HorizontalTextAlignment="Center" VerticalOptions="Center"/>
                                     <Label Grid.Column="1" Text="{Binding InsulinValue.Text}" 
                                         HorizontalTextAlignment="Center" VerticalOptions="Center"/>
