v.0.9.4 one fix and UI improvements
FoodToHitTargetCarbsPage: fixed the passing if parameters to this page
Icons: 10 new icons, Modified other icons,

--- a/GlucoMan.Maui/HypoPredictionPage.xaml
+++ b/GlucoMan.Maui/HypoPredictionPage.xaml
@@ -4,7 +4,6 @@
              x:Class="GlucoMan.Maui.HypoPredictionPage"
              Title="Hypoglicemia time prediction">
     <ContentPage.Content>
-        <!--RowDefinitions="55,55,20,20,70,70,50,20,50,20,50,50,20,50,40"-->
         <ScrollView>
             <Grid RowDefinitions="Auto,
               Auto,Auto,Auto,Auto,Auto,
@@ -12,18 +11,26 @@
               27,Auto,Auto,Auto" 
               ColumnDefinitions="*,*,*,*">
 
-            <Button Grid.Row="0" Grid.Column="0" Text="Now" Margin="1"
+            <Button Grid.Row="0" Grid.Column="0"
+                    ImageSource="clock.png"
                     ToolTipProperties.Text="Enter Now time: copies the current day and time to the date of the current glucose measurement"
                     Clicked="btnNow_Click"/>
-            <Button Grid.Row="0" Grid.Column="1" Margin="1"
+                <!--Text="Now" Margin="1"-->
+            <Button Grid.Row="0" Grid.Column="1"
+                    ImageSource="get_next.png"
                     ToolTipProperties.Text="Enter the next glucose measurement: moves the current glucose measurement into the previous and copies time now in latest glucose measurement"
-                    Clicked="btnNext_Click" Text="Next"/>
-            <Button Grid.Row="0" Grid.Column="2" Margin="1"
-                    ToolTipProperties.Text="Read: reads the last two glucose measurements from the database"
-                    Clicked="btnReadGlucose_Click" Text="Read gl."/>
-            <Button Grid.Row="0" Grid.Column="3" Margin="1"
+                    Clicked="btnNext_Click"/>
+                <!--Margin="1" Text="Next"-->
+            <Button Grid.Row="0" Grid.Column="2"
+                ImageSource="get_last_two_blood.png"
+                ToolTipProperties.Text="Read: reads the last two glucose measurements from the database"
+                Clicked="btnReadGlucose_Click"/>
+            <!--Margin="1" Text="Read gl."-->
+            <Button Grid.Row="0" Grid.Column="3"
+                    ImageSource="prediction.png"
                     ToolTipProperties.Text="Predict: predicts the time at which the glucose will reach the value for alarm (prediction by linear extrapolation, applies only into VERY STRICT conditions))"
-                    Clicked="btnPredict_Click" Text="Predict"/>
+                    Clicked="btnPredict_Click"/>
+                <!--Margin="1" Text="Predict"-->
 
             <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Text="Glucose for alarm" 
                     HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
@@ -120,11 +127,12 @@
             
             <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="3" Margin="1"
                    Text="Calculation of a future glucose value, starting from now and with current slope" 
-                   HorizontalTextAlignment="Start" VerticalTextAlignment="Center" />
-            <Button Grid.Row="12" Grid.Column="3" x:Name="btnCalcFutureGlucose" Margin="1"
+                   HorizontalTextAlignment="Start" VerticalTextAlignment="Center"/>
+            <Button Grid.Row="12" Grid.Column="3" x:Name="btnCalcFutureGlucose"
+                    ImageSource="calc_extrapolation.png"
                     ToolTipProperties.Text="Calculates the future glucose after 'Time diff' minutes from 'current measurement' time (prediction uses the shown 'slope'). USE THIS WITH CAUTION!"
-                    Clicked="btnCalcFutureGlucose_Click" Text="Calc."></Button>
-
+                    Clicked="btnCalcFutureGlucose_Click"></Button>
+                <!--Margin="1" Text="Calc."-->
             <Label Grid.Row="13" Grid.Column="0" Text="Time diff.[min]" HorizontalTextAlignment="Center" />
             <Label Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="2" Text="Future time" HorizontalTextAlignment="Center" />
             <Label Grid.Row="13" Grid.Column="3" Text="Future gluc" HorizontalTextAlignment="Center" />
