--- a/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
+++ b/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
@@ -5,14 +5,15 @@
              Title="Food to reach CHO">
     <ContentPage.Content>
         <!--RowDefinitions="60,0,50,60,20,60,60,60,50,60"-->
-        <Grid RowDefinitions="Auto,
+        <Grid RowDefinitions="75,
               0,Auto,Auto,Auto,Auto,
-              Auto,Auto,Auto,60"
+              75,75,Auto,60"
               ColumnDefinitions="*,*,*"
               Margin="1">
-            <Button Grid.Row="0" Grid.Column="1" x:Name="btnCalculateGrams" Text="Food Calc." 
-                   ToolTipProperties.Text="Calculates the grams of chosen food you need to eat to reach the target carbohydrates"
-                   IsEnabled="True"  Clicked="btnCalculateGrams_Click" />
+            <Button Grid.Row="0" Grid.Column="1" x:Name="btnCalculateGrams" 
+                    ImageSource="calc_food.png"
+                   ToolTipProperties.Text="Food Calc: calculates the grams of chosen food you need to eat to reach the target carbohydrates"
+                   IsEnabled="True" Clicked="btnCalculateGrams_Click" />
            
             <Label Grid.Row="2" Grid.Column="0" Text="Target CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="3" Grid.Column="0" x:Name="TxtTargetCho" Text="" Unfocused="TxtTargetCho_Leave"
@@ -48,27 +49,32 @@
                    ToolTipProperties.Text="Short name of the food we want to eat to reach the target carbohydrates"
                    />
 
-            <Button Grid.Row="6" Grid.Column="0" x:Name="btnReadTarget" Text="Read target&#10;CHO" 
-                    LineBreakMode="WordWrap" Margin="1"
-                    ToolTipProperties.Text="Reads from meal page current total carbohydrates"
+            <Button Grid.Row="6" Grid.Column="0" x:Name="btnReadTarget"
+                    ImageSource="target.png"
+                    ToolTipProperties.Text="Read Target CHO: reads from the bolus calculation page the CHO to eat"
                     Clicked="btnReadTargetCho_Click" />
-            <Button Grid.Row="6" Grid.Column="1" x:Name="btnReadChoTaken" Text="Read taken&#10;CHO"
-                   LineBreakMode="WordWrap" Margin="1"
-                   ToolTipProperties.Text="Reads from meal page carbohydrates already eaten"
-                   IsEnabled="True" Clicked="btnReadChoTaken_Click" />
-            <Button Grid.Row="6" Grid.Column="2" x:Name="btnReadFood" Text="Read Food&#10;CHO [%]" 
-                    LineBreakMode="WordWrap" Margin="1"
-                   ToolTipProperties.Text="Reads from meal page the food that is selected"
-                   IsEnabled="True" Clicked="btnReadFood_Click" />
+            <!--Text="Read target&#10;CHO"-->
+            <Button Grid.Row="6" Grid.Column="1" x:Name="btnReadChoTaken" 
+                    ImageSource="get_last_sugar.png"
+                    ToolTipProperties.Text="Read eaten CHO: reads from the meal page the quantity of carbohydrates already eaten"
+                    IsEnabled="True" Clicked="btnReadChoTaken_Click" />
+            <!--Text="Read taken&#10;CHO" LineBreakMode="WordWrap" Margin="1"-->
+            <Button Grid.Row="6" Grid.Column="2" x:Name="btnReadFood" 
+                    ImageSource="get_last_food.png"
+                    ToolTipProperties.Text="Read food CHO: reads from the meal page the CHO% of the food that is selected"
+                    IsEnabled="True" Clicked="btnReadFood_Click" />
+            <!--Text="Read Food&#10;CHO [%]" LineBreakMode="WordWrap" Margin="1"-->
             
-            <Button Grid.Row="7" Grid.Column="1" x:Name="btnReadAll" Text="Read All" 
-                   ToolTipProperties.Text="Reads from meal page all useful parameters"
-                   Clicked="btnReadAll_Click" />
+            <Button Grid.Row="7" Grid.Column="1" x:Name="btnReadAll"
+                    ImageSource="get_last_all.png"
+                    ToolTipProperties.Text="Read all: reads all the parameters useful to calculate the CHO that has still to be eaten"
+                    Clicked="btnReadAll_Click" />
+            <!--Text="Read All"-->
 
             <Label Grid.Row="8" Grid.Column="0" Text="CHO left to take [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="9" Grid.Column="0" x:Name="TxtChoLeftToTake" Text="" Unfocused="TxtChoOfFood_Leave"
                    Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" Margin="1"
-                   ToolTipProperties.Text="Calculated carbohydrates to be eaten to reach the target"
+                   ToolTipProperties.Text="CHO left: calculated carbohydrates to be eaten to reach the target"
                    VerticalOptions="Center"
                    BackgroundColor="SkyBlue" TextColor="Black"
                    FontSize="Large" />
@@ -82,7 +88,7 @@
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="9" Grid.Column="2" x:Name="TxtFoodToHitTarget" Text="" Margin="1"
                    Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End"
-                   ToolTipProperties.Text="Gram of chosen food to eat to reach the target carbohydrates"
+                   ToolTipProperties.Text="Food to eat: grams of the chosen food one has to eat to reach the target carbohydrates"
                    VerticalOptions="Center" FontSize="Large" 
                    BackgroundColor="SkyBlue" TextColor="Black"/>
         </Grid>
